fixed font on ios

--- a/chaser/style.css
+++ b/chaser/style.css
@@ -91,4 +91,6 @@ body {
   text-align: center;
   margin-top: 4%;
   font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-style: italic;
 }
